--- a/.github/workflows/android.yaml
+++ b/.github/workflows/android.yaml
@@ -22,5 +22,14 @@ jobs:
 
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
-    - name: Build with Gradle
+    
+    - name: Build with Gradle (debug)
+      run: ./gradlew assembleDebug
+   
+    - name: Run unit tests
+      run: ./gradlew testStageDebugUnitTest
+    
+    - name: Build with Gradle (build)
       run: ./gradlew build
+      
+      
