--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.ReadMe" >
+        android:theme="@style/Theme.ReadMe"
+        android:usesCleartextTraffic="true">
         <activity
             android:name=".RegisterActivity"
             android:exported="true"
